added initial pages for router

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -9,9 +9,9 @@
         <ng-container>
           <div>
                 <ng-container>
-                  <a mat-list-item routerLinkActive="active" routerLink="GestionEmpresas">Employee Salaries</a>
-                  <a mat-list-item routerLinkActive="active" routerLink="DiasDeGracia">Total Salary</a>
-                  <a mat-list-item routerLinkActive="active" routerLink="ConsultarEmpresa">Bonus</a>
+                  <a mat-list-item routerLinkActive="active" routerLink="employee-salaries">Employee Salaries</a>
+                  <a mat-list-item routerLinkActive="active" routerLink="total-salary">Total Salary</a>
+                  <a mat-list-item routerLinkActive="active" routerLink="bonus">Bonus</a>
                 </ng-container>
           </div>
         </ng-container>
@@ -27,6 +27,3 @@
         <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
-    
-    
-    
