--- a/src/app/pages/employee-salaries/employee-salaries.component.html
+++ b/src/app/pages/employee-salaries/employee-salaries.component.html
@@ -1,1 +1,178 @@
-<p>employee-salaries works!</p>
+<mat-card>
+    <mat-card-title>Employee Salaries</mat-card-title>
+    <div class="content">
+        <h4><b>User info:</b></h4>
+        <form [formGroup]="formGroup">
+            <div class="row">
+                <mat-form-field>
+                    <mat-label>Name</mat-label>
+                    <input matInput formControlName="employeeName" placeholder="Name">
+                    <button *ngIf="formGroup.get('employeeName').value" matSuffix mat-icon-button aria-label="Clear" (click)="formGroup.get('employeeName').setValue(''); disableForm();">
+                        <mat-icon>close</mat-icon>
+                    </button>
+                    <mat-error
+                        *ngIf="!formGroup.get('employeeName').valid && formGroup.get('employeeName').touched">
+                        Name is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Surname</mat-label>
+                    <input matInput formControlName="employeeSurname" placeholder="Surname">
+                    <button *ngIf="formGroup.get('employeeSurname').value" matSuffix mat-icon-button aria-label="Clear" (click)="formGroup.get('employeeSurname').setValue(''); disableForm();">
+                        <mat-icon>close</mat-icon>
+                    </button>
+                    <mat-error
+                        *ngIf="!formGroup.get('employeeSurname').valid && formGroup.get('employeeSurname').touched">
+                        Surname is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+                <button [disabled]="!missingSearch" mat-raised-button (click)="search()" type="button">
+                    <mat-icon>search</mat-icon>
+                    Search employee
+                </button>
+                <button class="save-button" [disabled]="missingSearch" mat-raised-button (click)="save()" color="primary">
+                    <mat-icon>save_alt</mat-icon>
+                    Save
+                </button>
+            </div>
+            <div class="row">
+                <mat-form-field>
+                    <mat-label>Employee Code</mat-label>
+                    <input matInput formControlName="employeeCode" placeholder="Employee Code">
+                    <mat-error
+                        *ngIf="!formGroup.get('employeeCode').valid && formGroup.get('employeeCode').touched">
+                        Employee Code is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field> 
+                <mat-form-field>
+                    <mat-select #intComFilt placeholder="Office" formControlName="officeId" name="office">
+                    <mat-option *ngFor="let office of offices" [value]="office.officeId">
+                        {{office.name}}
+                    </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-select #intComFilt placeholder="Division" formControlName="divisionId" name="division">
+                    <mat-option *ngFor="let division of divisions" [value]="division.divisionId">
+                        {{division.name}}
+                    </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-select #intComFilt placeholder="Position" formControlName="positionId" name="position">
+                    <mat-option *ngFor="let position of positions" [value]="position.positionId">
+                        {{position.name}}
+                    </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="row">
+                <mat-form-field>
+                    <mat-label>Grade</mat-label>
+                        <input formControlName="grade" matInput type="number">
+                    <mat-error
+                        *ngIf="!formGroup.get('grade').valid && formGroup.get('grade').touched">
+                        Grade is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Identification Number</mat-label>
+                    <input matInput formControlName="identificationNumber" placeholder="Identification Number">
+                    <mat-error
+                        *ngIf="!formGroup.get('identificationNumber').valid && formGroup.get('identificationNumber').touched">
+                        Identification Number is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Begin Date</mat-label>
+                    <input autocomplete="off" formControlName="beginDate" matInput [matDatepicker]="beginDate" (focus)="beginDate.open()" (click)="beginDate.open()" placeholder="Begin Date">
+                    <mat-datepicker-toggle matSuffix [for]="beginDate"></mat-datepicker-toggle>
+                    <mat-datepicker #beginDate></mat-datepicker>
+                    <mat-error *ngIf="!formGroup.get('beginDate').valid && formGroup.get('beginDate').touched 
+                        && formGroup.get('beginDate').errors.required">
+                        Begin Date is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field>
+                    <mat-label>Birthday</mat-label>
+                    <input autocomplete="off" formControlName="birthday" matInput [matDatepicker]="birthday" (focus)="birthday.open()" (click)="birthday.open()" placeholder="Birthday Date">
+                    <mat-datepicker-toggle matSuffix [for]="birthday"></mat-datepicker-toggle>
+                    <mat-datepicker #birthday></mat-datepicker>
+                    <mat-error *ngIf="!formGroup.get('birthday').valid && formGroup.get('birthday').touched 
+                        && formGroup.get('birthday').errors.required">
+                        Birthday is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+            </div>
+        </form>
+        <h4>
+            <b>SALARIES:</b>
+        </h4> 
+        <div class="table-container mat-elevation-z8">
+            <table mat-table #table [dataSource]="dataSource">
+                <!-- Year Column -->
+                <ng-container matColumnDef="year">
+                    <th mat-header-cell *matHeaderCellDef> year </th>
+                    <td mat-cell *matCellDef="let element"> {{element.year}} </td>
+                </ng-container>
+
+                <!-- Month Column -->
+                <ng-container matColumnDef="month">
+                    <th mat-header-cell *matHeaderCellDef> Month </th>
+                    <td mat-cell *matCellDef="let element"> {{element.month}} </td>
+                </ng-container>
+
+                <!-- BaseSalary Column -->
+                <ng-container matColumnDef="baseSalary">
+                    <th mat-header-cell *matHeaderCellDef> Base Salary </th>
+                    <td mat-cell *matCellDef="let element"> {{element.baseSalary}} </td>
+                </ng-container>
+
+                <!-- ProductionBonus Column -->
+                <ng-container matColumnDef="productionBonus">
+                    <th mat-header-cell *matHeaderCellDef> Production Bonus </th>
+                    <td mat-cell *matCellDef="let element"> {{element.productionBonus}} </td>
+                </ng-container>
+
+                <!-- CompensatioBonus Column -->
+                <ng-container matColumnDef="compensatioBonus">
+                    <th mat-header-cell *matHeaderCellDef> Compensatio Bonus </th>
+                    <td mat-cell *matCellDef="let element"> {{element.compensatioBonus}} </td>
+                </ng-container>
+
+                 <!-- Commission Column -->
+                <ng-container matColumnDef="commission">
+                    <th mat-header-cell *matHeaderCellDef> Commission </th>
+                    <td mat-cell *matCellDef="let element"> {{element.commission}} </td>
+                </ng-container>
+
+                <!-- Contributions Column -->
+                <ng-container matColumnDef="contributions">
+                    <th mat-header-cell *matHeaderCellDef> Contributions </th>
+                    <td mat-cell *matCellDef="let element"> {{element.contributions}} </td>
+                </ng-container>
+
+                <!-- Action Column -->
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-icon-button (click)="addSalary(element)" title="Edit"><mat-icon>launch</mat-icon></button>
+                        <button mat-icon-button color="warn" (click)="removeSalary(element)" title="Remove"><mat-icon>delete_outline</mat-icon></button>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="7">No salaries</td>
+                  </tr>
+            </table>
+        </div>
+        <p class="add-button">
+            <button [disabled]="missingSearch" mat-raised-button (click)="addSalary(null)">
+                <mat-icon>library_add</mat-icon>
+                Add Month Salary
+            </button>
+        </p>
+    </div>
+</mat-card>
