--- a/src/app/pages/bonus/bonus.component.html
+++ b/src/app/pages/bonus/bonus.component.html
@@ -1,3 +1,90 @@
 <mat-card>
     <mat-card-title>Calculate Bonus</mat-card-title>
+    <br/>
+    <div class="content">
+
+        <form [formGroup]="formGroup">
+            <div class="row">
+                <mat-form-field>
+                    <mat-label>Employee Code</mat-label>
+                    <input matInput formControlName="employeeCode" placeholder="Employee Code">
+                    <mat-error
+                        *ngIf="!formGroup.get('employeeCode').valid && formGroup.get('employeeCode').touched">
+                        Employee Code is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+                <button [disabled]="!formGroup.get('employeeCode').valid" mat-raised-button (click)="search()" color="primary">
+                    <mat-icon>search</mat-icon>
+                    Search employee
+                </button>
+            </div>
+        </form>
+
+        <P *ngIf="employeeBonus != null"><b>Bonus:</b>{{employeeBonus}}</P>
+        <br/>
+        <P><b>Salaries:</b></P>
+        <div class="table-container mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort>
+            
+                <!-- employeeCode Column -->
+                <ng-container matColumnDef="employeeCode">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+                <td mat-cell *matCellDef="let row"> {{row.employeeCode}} </td>
+                </ng-container>
+            
+                <!-- employeeFullName Column -->
+                <ng-container matColumnDef="employeeFullName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Full Name </th>
+                <td mat-cell *matCellDef="let row"> {{row.employeeFullName}} </td>
+                </ng-container>
+            
+                <!-- division Column -->
+                <ng-container matColumnDef="division">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Division </th>
+                <td mat-cell *matCellDef="let row"> {{row.division}} </td>
+                </ng-container>
+            
+                <!-- position Column -->
+                <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Position </th>
+                <td mat-cell *matCellDef="let row"> {{row.position}} </td>
+                </ng-container>
+
+                <!-- beginDate Column -->
+                <ng-container matColumnDef="beginDate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Begin Date </th>
+                    <td mat-cell *matCellDef="let row"> {{row.beginDate | date :'dd/MM/yyyy'}} </td>
+                </ng-container>
+
+                <!-- birthday Column -->
+                <ng-container matColumnDef="birthday">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Birthday </th>
+                    <td mat-cell *matCellDef="let row"> {{row.birthday | date :'dd/MM/yyyy'}} </td>
+                </ng-container>
+
+                <!-- identificationNumber Column -->
+                <ng-container matColumnDef="identificationNumber">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Identification Number </th>
+                    <td mat-cell *matCellDef="let row"> {{row.identificationNumber}} </td>
+                </ng-container>
+
+                <!-- totalSalary Column -->
+                <ng-container matColumnDef="totalSalary">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Salary </th>
+                    <td mat-cell *matCellDef="let row"> {{row.totalSalary | number : '1.2-2'}} </td>
+                </ng-container>
+                
+            
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr 
+                    mat-row
+                    *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                <!-- Row shown when there is no matching data. -->
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">No data</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </mat-card>
